Updated the NLTK

--- a/Untitled6.ipynb
+++ b/Untitled6.ipynb
@@ -2,37 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-5-ecc0c454ad96>:23: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "<ipython-input-6-ba2bb4308e04>:23: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  data1.drop(['id', 'conversation_id', 'created_at', 'date', 'timezone', 'place', 'hashtags', 'cashtags', 'user_id', 'user_id_str'\n",
-      "<ipython-input-5-ecc0c454ad96>:34: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "<ipython-input-6-ba2bb4308e04>:34: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  data2.drop(['id', 'conversation_id', 'created_at', 'date', 'timezone', 'place', 'hashtags', 'cashtags', 'user_id', 'user_id_str'\n",
-      "<ipython-input-5-ecc0c454ad96>:49: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "<ipython-input-6-ba2bb4308e04>:49: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  data1.drop(['language', 'username'], 1, inplace= True)\n",
-      "<ipython-input-5-ecc0c454ad96>:50: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "<ipython-input-6-ba2bb4308e04>:50: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  data2.drop('language', 1, inplace= True)\n",
-      "<ipython-input-5-ecc0c454ad96>:51: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only.\n",
-      "  combined_data = pd.concat([data1, data2], 0, ignore_index= True )\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator MultinomialNB from version 0.23.1 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n"
+      "<ipython-input-6-ba2bb4308e04>:51: FutureWarning: In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only.\n",
+      "  combined_data = pd.concat([data1, data2], 0, ignore_index= True )\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array(['Depressed'], dtype='<U13')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -89,7 +76,7 @@
     "combined_data = pd.concat([data1, data2], 0, ignore_index= True )\n",
     "\n",
     "import string\n",
-    "from nltk.corpus import stopwords\n",
+    "nltk.download('stopwords')\n",
     "\n",
     "def text_process(mess):\n",
     "    \"\"\"\n",
